# 2D-Game-collision-detection-Cpp-WinBGIm

./: README.md
NinjaMario/: CMakeLists.txt  block.cpp  block.hpp  coin.cpp  coin.hpp  endpoint.cpp  endpoint.hpp  enemy.cpp  enemy.hpp  lifebar.cpp  lifebar.hpp  main.cpp  mario.cpp  mario.hpp  object.cpp  object.hpp  screen.cpp  screen.hpp  spike.cpp  spike.hpp
NinjaMario/include/: block.hpp  coin.hpp  endpoint.hpp  enemy.hpp  lifebar.hpp  mario.hpp  object.hpp  screen.hpp  spike.hpp
NinjaMario/src/: block.cpp  coin.cpp  endpoint.cpp  enemy.cpp  lifebar.cpp  mario.cpp  object.cpp  screen.cpp  spike.cpp
